--- a/TE_social_cue_detection_example.ipynb
+++ b/TE_social_cue_detection_example.ipynb
@@ -7,7 +7,9 @@
     "## Example of social cue detection framework using transfer entropy\n",
     "This is a basic demonstration of the social cue detection framework using transfer entropy based on the work published [here](https://doi.org/10.1145/3610977.3634933). This framework detects perceptible social cues during interactions as well as their directionality. In this demonstration, we're going to go through step by step the framework working on some manually generated data. The framework handles raw time-series data such as\n",
     "$$\n",
-    "    X = X_1, X_2, ..., X_n\\\\\n",
+    "    X = X_1, X_2, ..., X_n\n",
+    "$$\n",
+    "$$\n",
     "    Y = Y_1, Y_2, ..., Y_n,\n",
     "$$\n",
     "and detects when/where perceptible cue exchanges between the time-series happen. The framework has four (4) stages: \n",
@@ -154,7 +156,9 @@
     "### 1. Data preparation\n",
     "We first define the two time-series as the source and the target (As indicated above). Simply speaking, the source transmits the cue and the target receive the cue. In this demo, we attempt to find the cues transfered from the source to the target. Assuming we define $X$ as the target and $Y$ as the source, the first step is preparing the data. We use [Takens' delay embedding](https://doi.org/10.1007/BFb0091924) to create higher-dimensional embeddings for the time-history series of the target and source.\n",
     "$$\n",
-    "    \\mathbf{X}_{t}^{(d)} = (x(t-\\delta), x(t-2\\delta), ..., x(t-(d-1)\\delta))\\\\\n",
+    "    \\mathbf{X}_{t}^{(d)} = (x(t-\\delta), x(t-2\\delta), ..., x(t-(d-1)\\delta))\n",
+    "$$\n",
+    "$$\n",
     "    \\mathbf{Y}_{t}^{(d)} = (y(t-\\delta), y(t-2\\delta), ..., y(t-(d-1)\\delta)) ,\n",
     "$$\n",
     "where $d$ denotes the history length and $\\delta$ denotes the unit time step. For this demonstration, we set $d=10$ and $\\delta=1$. There are two types of training data we need to prepare $(X_{t-1}, X_{t-2}, ..., X_{t-10})$ and $(X_{t-1}, X_{t-2}, ..., X_{t-10}, Y_{t-1}, Y_{t-2}, ..., Y_{t-10})$. We call them the data without communication (`NoCommDataset`) and the data with communication (`CommDataset`) respectively. But they share the same training labels $X_t$. That is, we're going to train two models: \n",
@@ -660,8 +664,12 @@
     "### 4. Cue detection\n",
     "With the transfer entropy obtained above, cue detection is achieved by using double exponential smoothing (DES) followed by a thresholding. Let us denote $\\mu_t$, $\\sigma_t$ and $T_t$ as the moving mean, moving standard deviation of TE and current TE at time $t$. The DES works as follows:\n",
     "$$\n",
-    "    \\mu_t =\\alpha T_t+(1+\\alpha)(\\mu_{t-1}+b_{t-1}) \\\\\n",
-    "    \\sigma_t = (1-\\alpha)(\\sigma_{t-1}+\\alpha(T_t-\\mu_{t-1}-b_{t-1})(T_t-\\mu_{t-1})) \\\\\n",
+    "    \\mu_t =\\alpha T_t+(1+\\alpha)(\\mu_{t-1}+b_{t-1})\n",
+    "$$\n",
+    "$$\n",
+    "    \\sigma_t = (1-\\alpha)(\\sigma_{t-1}+\\alpha(T_t-\\mu_{t-1}-b_{t-1})(T_t-\\mu_{t-1}))\n",
+    "$$\n",
+    "$$\n",
     "    b_t =\\beta(T_t-x_{t-1})+(1-\\beta)b_{t-1}\n",
     "$$\n",
     "Here, $b_t$ is the smoothed trend at time $t$, $\\alpha$ is a smoothing factor and $\\beta$ a trend smoothing factor. Then the perceptible cue threshold is computed as\n",
